|
Quick Lists
|
|
Bug ID:
|
6811267
|
|
Votes
|
0
|
|
Synopsis
|
Fix for 6809798 broke linux build
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs15(b03),
7(b51) (Bug ID:2174488)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
|
|
Submit Date
|
27-FEB-2009
|
|
Description
|
This small change:
+ void PhaseCFG::replace_block_proj_ctrl( Node *n );
broke compilation on recent GCCs again:
src/share/vm/opto/block.hpp:350: error: extra qualification 'PhaseCFG::' on member 'replace_block_proj_ctrl'
Posted Date : 2009-02-27 16:14:39.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
See description
Posted Date : 2009-02-27 16:24:31.0
http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/ec59443af135
Posted Date : 2009-02-27 19:14:18.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |