6811267: Fix for 6809798 broke linux build

Fix method's declaration.

Reviewed-by: phh, twisti